example1-mongoApp/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  # namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend-mongodb
  policyTypes:
    - Ingress
    # - Egress
  ingress:
    - from:
    #     - ipBlock:
    #         cidr: 10.244.0.0/16
    #         except:
    #           - 10.244.120.82/32
        # - namespaceSelector:
        #     matchLabels:
        #       name: blue
        - podSelector:
            matchLabels:
              app: backend-mongodb
      # ports:
      #   - protocol: TCP
      #     port: 6379
  # egress:
  #   - to:
  #       - ipBlock:
  #           cidr: 10.0.0.0/24
  #     ports:
  #       - protocol: TCP
  #         port: 5978
